--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,6 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v2
       - run: nix flake check
       - run: cd scala && sbt docs
-      - run: cd website && yarn install
 
       - env:
           GIT_USER: valdemargr
@@ -31,252 +30,4 @@ jobs:
         run: |
           git config --global user.name ValdemarGr
           git config --global user.email randomvald0069@gmail.com
-          cd website && yarn deploy
-  build:
-    name: Build and Test
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        scala: [2.13, 3]
-        java: [temurin@8]
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 60
-    steps:
-      - name: Checkout current branch (full)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Java (temurin@8)
-        id: setup-java-temurin-8
-        if: matrix.java == 'temurin@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: sbt
-
-      - name: sbt update
-        if: matrix.java == 'temurin@8' && steps.setup-java-temurin-8.outputs.cache-hit == 'false'
-        run: sbt +update
-
-      - name: Start services
-        run: docker-compose up -d
-
-      - name: Check that workflows are up to date
-        run: sbt githubWorkflowCheck
-
-      - name: Test
-        run: sbt '++ ${{ matrix.scala }}' test
-
-      - name: Make target directories
-        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: mkdir -p modules/client-codegen-sbt/target modules/server-http4s/target modules/server-graphql-ws/target modules/server/target modules/graphql-ws/target modules/client-codegen-cli/target modules/parser/target modules/relational-skunk/target modules/server-natchez/target target modules/client-http4s/target modules/client/target modules/relational-doobie/target modules/client-codegen/target modules/core/target modules/relational/target modules/server-goi/target project/target
-
-      - name: Compress target directories
-        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: tar cf targets.tar modules/client-codegen-sbt/target modules/server-http4s/target modules/server-graphql-ws/target modules/server/target modules/graphql-ws/target modules/client-codegen-cli/target modules/parser/target modules/relational-skunk/target modules/server-natchez/target target modules/client-http4s/target modules/client/target modules/relational-doobie/target modules/client-codegen/target modules/core/target modules/relational/target modules/server-goi/target project/target
-
-      - name: Upload target directories
-        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        uses: actions/upload-artifact@v3
-        with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-${{ matrix.scala }}
-          path: targets.tar
-
-  publish:
-    name: Publish Artifacts
-    needs: [build]
-    if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        java: [temurin@8]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout current branch (full)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Java (temurin@8)
-        id: setup-java-temurin-8
-        if: matrix.java == 'temurin@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: sbt
-
-      - name: sbt update
-        if: matrix.java == 'temurin@8' && steps.setup-java-temurin-8.outputs.cache-hit == 'false'
-        run: sbt +update
-
-      - name: Start services
-        run: docker-compose up -d
-
-      - name: Download target directories (2.13)
-        uses: actions/download-artifact@v3
-        with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13
-
-      - name: Inflate target directories (2.13)
-        run: |
-          tar xf targets.tar
-          rm targets.tar
-
-      - name: Download target directories (3)
-        uses: actions/download-artifact@v3
-        with:
-          name: target-${{ matrix.os }}-${{ matrix.java }}-3
-
-      - name: Inflate target directories (3)
-        run: |
-          tar xf targets.tar
-          rm targets.tar
-
-      - name: Import signing key
-        if: env.PGP_SECRET != '' && env.PGP_PASSPHRASE == ''
-        env:
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-        run: echo $PGP_SECRET | base64 -d -i - | gpg --import
-
-      - name: Import signing key and strip passphrase
-        if: env.PGP_SECRET != '' && env.PGP_PASSPHRASE != ''
-        env:
-          PGP_SECRET: ${{ secrets.PGP_SECRET }}
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-        run: |
-          echo "$PGP_SECRET" | base64 -d -i - > /tmp/signing-key.gpg
-          echo "$PGP_PASSPHRASE" | gpg --pinentry-mode loopback --passphrase-fd 0 --import /tmp/signing-key.gpg
-          (echo "$PGP_PASSPHRASE"; echo; echo) | gpg --command-fd 0 --pinentry-mode loopback --change-passphrase $(gpg --list-secret-keys --with-colons 2> /dev/null | grep '^sec:' | cut --delimiter ':' --fields 5 | tail -n 1)
-
-      - name: Publish
-        env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          SONATYPE_CREDENTIAL_HOST: ${{ secrets.SONATYPE_CREDENTIAL_HOST }}
-        run: sbt tlCiRelease
-
-  dependency-submission:
-    name: Submit Dependencies
-    if: github.event_name != 'pull_request'
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        java: [temurin@8]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout current branch (full)
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Java (temurin@8)
-        id: setup-java-temurin-8
-        if: matrix.java == 'temurin@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: sbt
-
-      - name: sbt update
-        if: matrix.java == 'temurin@8' && steps.setup-java-temurin-8.outputs.cache-hit == 'false'
-        run: sbt +update
-
-      - name: Start services
-        run: docker-compose up -d
-
-      - name: Submit Dependencies
-        uses: scalacenter/sbt-dependency-submission@v2
-        with:
-          modules-ignore: mdocext_2.13 mdocext_3 gql-docs_2.13 gql-docs_3 gql-readme_2.13 gql-readme_3 testcodegen_2.13 testcodegen_3
-          configs-ignore: test scala-tool scala-doc-tool test-internal
-
-  compile-docs:
-    name: Verify that the docs compile
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        scala: [2.13.12]
-        java: [temurin@11]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout current branch (fast)
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Start services
-        run: docker-compose up -d
-
-      - name: Setup Java (temurin@8)
-        id: setup-java-temurin-8
-        if: matrix.java == 'temurin@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: sbt
-
-      - name: sbt update
-        if: matrix.java == 'temurin@8' && steps.setup-java-temurin-8.outputs.cache-hit == 'false'
-        run: sbt +update
-
-      - name: Compile the documentation scala code
-        run: sbt '++ ${{ matrix.scala }}' docs/mdoc
-
-      - name: Compile the readme scala code
-        run: sbt '++ ${{ matrix.scala }}' readme/mdoc
-
-  docs:
-    name: Run mdoc docs
-    needs: [compile-docs]
-    if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        scala: [2.13.12]
-        java: [temurin@11]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout current branch (fast)
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Start services
-        run: docker-compose up -d
-
-      - name: Setup Java (temurin@8)
-        id: setup-java-temurin-8
-        if: matrix.java == 'temurin@8'
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: sbt
-
-      - name: sbt update
-        if: matrix.java == 'temurin@8' && steps.setup-java-temurin-8.outputs.cache-hit == 'false'
-        run: sbt +update
-
-      - run: git fetch --all --tags --force
-
-      - run: sbt '++ ${{ matrix.scala }}' docs/mdoc
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - run: cd website && yarn install
-
-      - env:
-          GIT_USER: valdemargr
-          GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name ValdemarGr
-          git config --global user.email randomvald0069@gmail.com
-          cd website && yarn deploy
+          cd site && yarn install && yarn deploy
