--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,8 @@ jobs:
       - run: nix flake check
       - run: nix develop --command bash -c "cd scala && sbt blog/mdoc"
 
-      - env:
-          GIT_USER: valdemargr
-          GIT_PASS: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy
         run: |
-          git config --global user.name ValdemarGr
-          git config --global user.email randomvald0069@gmail.com
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           cd site && yarn install && yarn deploy
